Commitando tudo modificado para nova branch

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
 
     <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
-    <link rel="stylesheet" type="text/css" href="css/custom.css">
+    <link rel="stylesheet" type="text/css" href="css/custom.min.css">
 
     <script src="js/jquery-3.1.1.min.js"></script>
 
@@ -74,8 +74,6 @@
             </div>
         </div>
     </div>
-
-
     <div class="ui container">
         <div class="ui vertical stripe segment">
             <div class="ui segments">
@@ -83,8 +81,31 @@
                     <div class="ui computer tablet only middle aligned grid">
 
                         <div class="center aligned four wide column ">
-                            <div class="ui small image centered">
-                                <img src="assets/images/python-logo.png">
+                                <div class="ui small image centered">
+                                    <img src="assets/images/escola.png">
+                                </div>                    
+                        </div>
+                        <div class="twelve wide column" id="escola_content">
+                            <h3>Local: E. E. Professor Aduar Kemell Dibo</h3>
+                            <p>
+                                A escola estadual Professor Aduar Kemell Dibo  se prontificou a receber de braços abertos a ideia da
+                                SECOMP XP e foi de suma importância para que a realização deste evento acontecesse. Inserir dados sobre quantidade de público alcançado e etc.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>  
+    <div class="ui container">
+        <div class="ui vertical stripe segment">
+            <div class="ui segments">
+                <div class="ui segment">
+                    <div class="ui computer tablet only middle aligned grid">
+
+                        <div class="center aligned four wide column ">
+                            <div class="ui medium image centered">
+                                <img src="assets/images/jessica.jpg">
                             </div>
                         </div>
 
@@ -142,8 +163,8 @@
 
                     <div class="ui mobile only middle aligned grid">
                         <div class="row">
-                            <div class="ui small image centered">
-                                <img src="assets/images/python-logo.png">
+                            <div class="ui medium image centered">
+                                <img src="assets/images/jessica.jpg">
                             </div>
                         </div>
 
@@ -201,131 +222,43 @@
                         </div>
                     </div>
                 </div>
-
+    </div>            
+    <div class="ui container">
+        <div class="ui vertical stripe segment">
+            <div class="ui segments">
                 <div class="ui segment">
                     <div class="ui computer tablet only middle aligned grid">
-
-                        <div class="center aligned four wide column">
-                            <div class="ui small image centered">
-                                <img src="assets/images/danger.png">
-                            </div>
+                        <div class="row">          
+                                <div class="center aligned sixteen wide column">
+                                    <h3>Equipe</h3>
+                                        <div class="ui centered big image">
+                                            <img src="assets/images/equipe1.jpg">    
+                                        </div>
+                                </div>
                         </div>
-
-                        <div class="twelve wide column">
-                            <h3>Palestra: Os perigos da internet e como se proteger</h3>
-
-                            <div class="ui list">
-                                <div class="item">
-                                    <i class="user icon"></i>
-                                    <div class="content">
-                                        <b>Palestrante:</b> Welliton Altimari
+                        <div class="center aligned row">        
+                            <div class="sixteen wide column" id="agradecimento_content">
+                                <h3>Agradecimentos  Especiais</h3>
+                                    <div class="ui bulleted list">
+                                        <div class="item">Cassiano Maia</div>
+                                        <div class="item">Felipe Sampaio</div>
+                                        <div class="item">Guilherme Servidoni</div>
+                                        <div class="item">João Augusto Leite</div>
+                                        <div class="item">Pedro Migliatti</div>
+                                        <div class="item">Rebeca Lima Rocha</div>
+                                        <div class="item">Thayse Oliveira</div>
+                                        <div class="item">Túlio Campos</div>
+                                        <div class="item">Vinícius Sanches</div>
+                                        <div class="item">Yuri Lovalho</div>
                                     </div>
-                                </div>
-
-                                <div class="item">
-                                    <i class="bullseye icon"></i>
-                                    <div class="content">
-                                        <b>Público Alvo:</b> Estudantes do Ensino Médio e Fundamental
-                                    </div>
-                                </div>
-
-                                <div class="item">
-                                    <i class="idea icon"></i>
-                                    <div class="content">
-                                        <b>Descrição:</b> Panorama sobre segurança e os perigos da internet
-                                        e
-                                        estratégias de proteção no mundo virtual.
-                                    </div>
-                                </div>
-
-                                <div class="item">
-                                    <i class="users icon"></i>
-                                    <div class="content">
-                                        <b>Vagas:</b> 40
-                                    </div>
-                                </div>
-
-                                <div class="item">
-                                    <i class="clock icon"></i>
-                                    <div class="content">
-                                        <b>Duração:</b> 1 hora
-                                    </div>
-                                </div>
-
-                                <div class="item">
-                                    <i class="marker icon"></i>
-                                    <div class="content">
-                                        <b>Local:</b> E.E. Professor Aduar Kemell Dibo
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="ui mobile only middle aligned grid">
-
-                        <div class="row">
-                            <div class="ui small image centered">
-                                <img src="assets/images/danger.png">
-                            </div>
-                        </div>
-
-                        <div class="row centered">
-                            <h3>Palestra: Os perigos da internet e como se proteger</h3>
-                        </div>
-
-                        <div class="sixteen wide column">
-                            <div class="ui list">
-                                <div class="item">
-                                    <i class="user icon"></i>
-                                    <div class="content">
-                                        <b>Palestrante:</b> Welliton Altimari
-                                    </div>
-                                </div>
-
-                                <div class="item">
-                                    <i class="bullseye icon"></i>
-                                    <div class="content">
-                                        <b>Público Alvo:</b> Estudantes do Ensino Médio e Fundamental
-                                    </div>
-                                </div>
-
-                                <div class="item">
-                                    <i class="idea icon"></i>
-                                    <div class="content">
-                                        <b>Descrição:</b> Panorama sobre segurança e os perigos da internet
-                                        e
-                                        estratégias de proteção no mundo virtual.
-                                    </div>
-                                </div>
-
-                                <div class="item">
-                                    <i class="users icon"></i>
-                                    <div class="content">
-                                        <b>Vagas:</b> 40
-                                    </div>
-                                </div>
-
-                                <div class="item">
-                                    <i class="clock icon"></i>
-                                    <div class="content">
-                                        <b>Duração:</b> 1 hora
-                                    </div>
-                                </div>
-
-                                <div class="item">
-                                    <i class="marker icon"></i>
-                                    <div class="content">
-                                        <b>Local:</b> E.E. Professor Aduar Kemell Dibo
-                                    </div>
-                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
+    </div>                       
+    <div class="ui container">
         <div class="ui vertical stripe segment">
             <div class="ui equal width stackable internally celled grid">
                 <div class="aligned row">
@@ -388,6 +321,45 @@
     </div>
 
     <div class="ui section divider"></div>
+
+    <div class="ui vertical stripe segment" id="secao_apoio">
+        <div class="ui centered grid container">
+            <div class="row">
+                <h2 class="ui centered header titulo_secao">
+                    Apoio
+                </h2>
+            </div>
+            <div class="row">
+                <div class="center aligned six wide column">
+                    <p align="center">
+                        <a href="" target="_blank">
+                            <img class="ui centered medium image"
+                                 src="assets/images/moreira.jpg"
+                                 alt="Logo Supermercado Moreira">
+                        </a>
+                    </p>
+                </div>
+                <div class="center aligned three wide column">
+                    <p align="center">
+                        <a href="http://saocarlos.pyladies.com/" target="_blank">
+                            <img class="ui fluid small image"
+                                 src="assets/images/pyladies.png"
+                                 alt="Logo Pyladies São Carlos">
+                        </a>
+                    </p>
+                </div>
+                <div class="center aligned seven wide column">
+                    <p align="center">
+                        <a href="" target="_blank">
+                            <img class="ui centered medium image"
+                                 src="assets/images/gaspar.png"
+                                 alt="Logo Gaspar do PQ">
+                        </a>
+                    </p>
+                </div>
+            </div>  
+        </div>
+    </div>
 
     <!-- Realização -->
     <div class="ui vertical stripe segment" id="secao_realizacao">
