Texto da escola atualizado

--- a/index.html
+++ b/index.html
@@ -89,7 +89,13 @@
                             <h3>Local: E. E. Professor Aduar Kemell Dibo</h3>
                             <p>
                                 A escola estadual Professor Aduar Kemell Dibo  se prontificou a receber de braços abertos a ideia da
-                                SECOMP XP e foi de suma importância para que a realização deste evento acontecesse. Inserir dados sobre quantidade de público alcançado e etc.
+                                SECOMP XP e foi de suma importância para que a realização deste evento acontecesse. A escola foi inaugurada em 2014, e recebe o nome do professor, cronista e odontólogo são-carlense falecido em 2010.
+                            </p>
+                            <p>
+                                O estabelecimento atende alunos do ensino fundamental e médio, está instalado no prédio de 3 mil m² de área construída, com oito salas, refeitório, quadra esportiva coberta, banheiros e área de serviço. Os estudantes e funcionários também contam com dois importantes programas da Secretaria: a sala de leitura e o Acessa Escola.
+                            </p>
+                            <p>
+                                A unidade beneficia moradores dos bairros Jardim dos Coqueiros, Residencial Itamarati, Maria Stela Fagá, Munique, Residencial Dom Constantino Amstaldem (São Carlos VIII), Jardim Santa Maria II e Residencial Astolpho Luiz do Prado.
                             </p>
                         </div>
                     </div>
