Foto da escola adicionada

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                     <div class="ui computer tablet only middle aligned grid">
 
                         <div class="center aligned four wide column ">
-                                <div class="ui small image centered">
-                                    <img src="assets/images/escola.png">
+                                <div class="ui medium image centered">
+                                    <img src="assets/images/escola.jpg">
                                 </div>                    
                         </div>
                         <div class="twelve wide column" id="escola_content">
