--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                             SECOMP, com conteúdo selecionado especialmente para eles, visando mostrar o fascinante e
                             gigantesco
                             mundo da Computação.<a id="objetivos_more" href="javascript:show_objetivos()">.. Leia
-                                mais</a></p></p>
+                                mais</a></p>
                         <div id="objetivos_content">
                             <p>Com conteúdo voltado a estudantes do Ensino Médio e Fundamental pretendemos, através de
                                 palestras
@@ -380,7 +380,6 @@
                                 nova
                                 geração de bacharéis e engenheiros da computação.</p>
                         </div>
-
                     </div>
                 </div>
             </div>
@@ -435,7 +434,7 @@
                     <h4>VIII SECOMP - SEMANA DA COMPUTAÇÃO DA UFSCAR<br></h4>
                     Universidade Federal de São Carlos<br>
                     Departamento de Computação<br>
-                    Rodovia Washington Luís, Km 235 - Bairro Jardim Guanabara - São Carlos/SP - CEP 13565-905</p>
+                    Rodovia Washington Luís, Km 235 - Bairro Jardim Guanabara - São Carlos/SP - CEP 13565-905
                     <p>
                         <a href="https://facebook.com/secompufscar" target="_blank">
                             <button class="tiny ui facebook button"><i class="facebook icon"></i>Facebook</button>
