Site refeito com identidade visual renovada

--- a/sobre.html
+++ b/sobre.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>SECOMP XP</title>
+    <title>SECOMP XP - Sobre</title>
     <meta name="description" content="A SECOMP XP é uma iniciativa da diretoria Sociocultural da SECOMP UFSCar.">
     <meta name="keywords"
           content="secomp, semana, computação, computacao, ufscar, universidade, federal, secompufscar, computing, dc,
@@ -53,85 +53,66 @@
 <body class="pushable">
 <main class="pusher">
 
-    <div class="computer only ui top huge inverted fixed menu" id="menu">
+    <div class="ui top huge inverted fixed menu" id="menu">
         <a class="item" href="index.html">
             <img src="assets/images/logo_secompxp.png">
         </a>
-        <a class="item" href="sobre.html">Sobre</a>
+        <a class="active item" href="sobre.html">Sobre</a>
         <a class="item" href="atividades.html">Atividades</a>
     </div>
 
-    <div class="ui inverted vertical masthead center aligned segment" id="intro">
-        <div id="particles-js"></div>
+    <div class="ui divider hidden"></div>
 
-        <div class="ui container">
-            <div class="row">
-                <div class="ui image">
-                    <img src="assets/images/logo_secompxp.png">
-                </div>
-            </div>
+    <div class="ui divider hidden"></div>
+
+    <div class="ui vertical stripe segment" id="conteudo">
+        <div class="ui text container">
+            <h1 class="texto_primario">SOBRE A SECOMP XP</h1>
+            <p>Quando a diretoria Sociocultural foi idealizada seu objetivo era claro, expandir a influência
+                da
+                SECOMP além do campus, proporcionando à comunidade um retorno através dos esforços de sua
+                organização como agradecimento às empresas, pessoas e ao departamento que apoiam essa
+                iniciativa.</p>
+            <p>No ano de 2016 a SECOMP fez visitas às escolas da cidade para divulgar o evento e, em uma
+                dessas
+                escolas, nos deparamos com estudantes que adoram a Computação tanto quanto nós. Todavia,
+                esses
+                alunos não poderiam estar na universidade para acompanhar todo o conteúdo que a semana
+                tem a
+                oferecer.</p>
+            <p>No ano de 2017, demos um passo além nas nossas realizações sociais e culturais e com
+                muito
+                orgulho a Semana da Computação da Universidade Federal de São Carlos apresentou a SECOMP XP,
+                um
+                dia
+                especial onde alunos do Ensino Médio e Fundamental poderam experimentar um pouco do
+                espírito
+                e
+                conteúdo da melhor semana da UFSCar numa imersão ao mundo da Computação.</p>
+
+            <div class="ui divider hidden"></div>
+
+            <h1 class="texto_primario">OBJETIVOS</h1>
+
+            <p>A SECOMP XP irá proporcionar aos alunos das escolas de São Carlos a experiência de participar
+                da
+                SECOMP, com conteúdo selecionado especialmente para eles, visando mostrar o fascinante e
+                gigantesco
+                mundo da Computação.</p>
+            <p>Com conteúdo voltado a estudantes do Ensino Médio e Fundamental pretendemos, através de
+                palestras
+                e
+                minicursos, expor, por exemplo, as diversas possibilidades que uma linguagem de
+                programação
+                pode
+                proporcionar e conscientizá-los acerca dos perigos da internet.</p>
+            <p>Almejamos criar um ambiente de imersão em nosso dia-a-dia e quem sabe acender a chama de
+                uma
+                nova
+                geração de bacharéis e engenheiros da computação.</p>
         </div>
     </div>
 
-    <!--<section class="ui vertical stripe segment" id="patrocinadores">
-        <div class="ui centered grid container">
-            <div class="row">
-                <h1 class="texto_primario">PATROCINADORES</h1>
-            </div>
-        </div>
-
-    </section>-->
-
-    <section class="ui vertical stripe segment" id="apoio">
-        <div class="ui centered grid container">
-            <div class="row">
-                <h1 class=texto_primario">QUEM AJUDOU A CONSTRUIR</h1>
-            </div>
-            <div class="middle aligned row">
-                <div class="three wide tablet five wide mobile three wide computer column">
-                    <p align="center">
-                        <a>
-                            <img class="ui medium image" src="assets/images/gaspar.png"
-                                 alt="Logo Gaspar do PQ">
-                        </a>
-                    </p>
-                </div>
-                <div class="three wide tablet five wide mobile three wide computer column">
-                    <p align="center">
-                        <a>
-                            <img class="ui medium image" src="assets/images/casa_salgado.png"
-                                 alt="Logo casa do salgado">
-                        </a>
-                    </p>
-                </div>
-                <div class="three wide tablet five wide mobile three wide computer column">
-                    <p align="center">
-                        <a href="https://petbcc.secompufscar.com.br/" target="_blank">
-                            <img class="ui medium image" src="assets/images/petbcc.png"
-                                 alt="Logo PET">
-                        </a>
-                    </p>
-                </div>
-                <div class="three wide tablet five wide mobile three wide computer column">
-                    <p align="center">
-                        <a href="http://saocarlos.pyladies.com/" target="_blank">
-                            <img class="ui small fluid image" src="assets/images/pyladies.png"
-                                 alt="Logo PyLadies">
-                        </a>
-                    </p>
-                </div>
-                <div class="three wide tablet five wide mobile three wide computer column">
-                    <p align="center">
-                        <a>
-                            <img class="ui medium fluid image"
-                                 src="assets/images/moreira.jpg"
-                                 alt="Logo Moreira">
-                        </a>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <section class="ui vertical stripe segment" id="realizacao">
         <div class="ui centered grid container">
@@ -199,7 +180,7 @@
 <script src="particles/particles.min.js"></script>
 <script src="particles/app.js"></script>
 <script>
-    $('.ui.shape').shape();
+
 </script>
 </body>
 </html>
