--- a/atividades.html
+++ b/atividades.html
@@ -72,6 +72,76 @@
 
         <div class="ui divider hidden"></div>
 
+        <div class="slides fade">
+            <div class="slide">
+                <div class="number">1 / 12</div>
+                <img class="imagem" src="assets/images/carrossel/1.jpg">
+            </div>
+            <div class="slide">
+                <div class="number">2 / 12</div>
+                <img class="imagem" src="assets/images/carrossel/2.jpg">
+            </div>
+            <div class="slide">
+                <div class="number">3 / 12</div>
+                <img class="imagem" src="assets/images/carrossel/3.jpg">
+            </div>
+            <div class="slide">
+                <div class="number">4 / 12</div>
+                <img class="imagem" src="assets/images/carrossel/4.jpg">
+            </div>
+            <div class="slide">
+                <div class="number">5 / 12</div>
+                <img class="imagem" src="assets/images/carrossel/5.jpg">
+            </div>
+            <div class="slide">
+                <div class="number">6 / 12</div>
+                <img class="imagem" src="assets/images/carrossel/6.jpg">
+            </div>
+            <div class="slide">
+                <div class="number">7 / 12</div>
+                <img class="imagem" src="assets/images/carrossel/7.jpg">
+            </div>
+            <div class="slide">
+                <div class="number">8 / 12</div>
+                <img class="imagem" src="assets/images/carrossel/8.jpg">
+            </div>
+            <div class="slide">
+                <div class="number">9 / 12</div>
+                <img class="imagem" src="assets/images/carrossel/9.jpg">
+            </div>
+            <div class="slide">
+                <div class="number">10 / 12</div>
+                <img class="imagem" src="assets/images/carrossel/10.jpg">
+            </div>
+            <div class="slide">
+                <div class="number">11 / 12</div>
+                <img class="imagem" src="assets/images/carrossel/11.jpg">
+            </div>
+            <div class="slide">
+                <div class="number">12 / 12</div>
+                <img class="imagem" src="assets/images/carrossel/12.jpg">
+            </div>
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        </div>
+
+        <div class="dots">
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
+            <span class="dot" onclick="currentSlide(4)"></span>
+            <span class="dot" onclick="currentSlide(5)"></span>
+            <span class="dot" onclick="currentSlide(6)"></span>
+            <span class="dot" onclick="currentSlide(7)"></span>
+            <span class="dot" onclick="currentSlide(8)"></span>
+            <span class="dot" onclick="currentSlide(9)"></span>
+            <span class="dot" onclick="currentSlide(10)"></span>
+            <span class="dot" onclick="currentSlide(11)"></span>
+            <span class="dot" onclick="currentSlide(12)"></span>
+        </div>
+
+        <div class="ui divider hidden"></div>
+
         <div class="ui stackable grid container">
             <div class="six wide column">
                 <div class="ui rounded image">
@@ -260,7 +330,6 @@
         </div>
     </div>
 </div>
-<script src="particles/particles.min.js"></script>
-<script src="particles/app.js"></script>
+<script src="js/scripts.js"></script>
 </body>
 </html>
