Ajustes no slideshow e Inserção de <hr>'s

--- a/atividades.html
+++ b/atividades.html
@@ -73,57 +73,58 @@
         <div class="ui divider hidden"></div>
 
         <div class="slides fade">
-            <div class="slide">
+            <div class="slide fade">
                 <div class="number">1 / 12</div>
                 <img class="imagem" src="assets/images/carrossel/1.jpg">
             </div>
-            <div class="slide">
+            <div class="slide fade">
                 <div class="number">2 / 12</div>
                 <img class="imagem" src="assets/images/carrossel/2.jpg">
             </div>
-            <div class="slide">
+            <div class="slide fade">
                 <div class="number">3 / 12</div>
                 <img class="imagem" src="assets/images/carrossel/3.jpg">
             </div>
-            <div class="slide">
+            <div class="slide fade">
                 <div class="number">4 / 12</div>
                 <img class="imagem" src="assets/images/carrossel/4.jpg">
             </div>
-            <div class="slide">
+            <div class="slide fade">
                 <div class="number">5 / 12</div>
                 <img class="imagem" src="assets/images/carrossel/5.jpg">
             </div>
-            <div class="slide">
+            <div class="slide fade">
                 <div class="number">6 / 12</div>
                 <img class="imagem" src="assets/images/carrossel/6.jpg">
             </div>
-            <div class="slide">
+            <div class="slide fade">
                 <div class="number">7 / 12</div>
                 <img class="imagem" src="assets/images/carrossel/7.jpg">
             </div>
-            <div class="slide">
+            <div class="slide fade">
                 <div class="number">8 / 12</div>
                 <img class="imagem" src="assets/images/carrossel/8.jpg">
             </div>
-            <div class="slide">
+            <div class="slide fade">
                 <div class="number">9 / 12</div>
                 <img class="imagem" src="assets/images/carrossel/9.jpg">
             </div>
-            <div class="slide">
+            <div class="slide fade">
                 <div class="number">10 / 12</div>
                 <img class="imagem" src="assets/images/carrossel/10.jpg">
             </div>
-            <div class="slide">
+            <div class="slide fade">
                 <div class="number">11 / 12</div>
                 <img class="imagem" src="assets/images/carrossel/11.jpg">
             </div>
-            <div class="slide">
+            <div class="slide fade">
                 <div class="number">12 / 12</div>
                 <img class="imagem" src="assets/images/carrossel/12.jpg">
             </div>
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
             <a class="next" onclick="plusSlides(1)">&#10095;</a>
         </div>
+		<br>
 
         <div class="dots">
             <span class="dot" onclick="currentSlide(1)"></span>
@@ -139,6 +140,8 @@
             <span class="dot" onclick="currentSlide(11)"></span>
             <span class="dot" onclick="currentSlide(12)"></span>
         </div>
+		<br>
+		<hr class="ruler">
 
         <div class="ui divider hidden"></div>
 
@@ -223,6 +226,8 @@
         </div>
 
         <div class="ui divider hidden"></div>
+		<br>
+		<hr class="ruler">
 
         <div class="ui center aligned container">
             <h1 class="header">Equipe</h1>
@@ -234,6 +239,8 @@
                 Cassiano Maia, Felipe Sampaio, Guilherme Servidoni, João Augusto Leite, Pedro Migliatti, Rebeca Lima Rocha, Thayse Oliveira, Túlio Campos, Vinícius Sanches, Yuri Lovalho
             </div>
         </div>
+		<br>
+		<hr class="ruler">
 
         <div class="ui divider hidden"></div>
 
